<?xml version="1.0" encoding="utf-8"?>




<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:background="#f8f8f8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <SearchView
                    android:id="@+id/searchByKeyword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/text_style"/>



            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/searchByCategory"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:spinnerMode="dialog"
                     />
                <View
                    android:layout_width="1.5dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="#eeeeee"/>

                <Button
                    android:id="@+id/priceLowToHigh"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:onClick="buttonPriceLowToHigh"
                    android:text="Price ↑" />

                <Button
                    android:id="@+id/priceHighToLow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:onClick="buttonPriceHighToLow"
                    android:text="Price ↓" />

                <Button
                    android:id="@+id/rateLowToHigh"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:onClick="buttonRateLowToHigh"
                    android:text="Rate ↑" />

                <Button
                    android:id="@+id/rateHighToLow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:onClick="buttonRateHighToLow"
                    android:text="Rate ↓" />

            </LinearLayout>






        </LinearLayout>



        <LinearLayout android:id="@+id/center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/top"
        android:layout_above="@id/bottom"
        >

        <ListView
        android:id="@+id/cusListView"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingBottom="50dp"
        android:cacheColorHint="#00000000"
        />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:background="#eeeeee"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCusBackToMain"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="btnCusBackToMain"
                android:text="BACK" />

            <Button
                android:id="@+id/viewCustomerHistory"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="buttonOpenHistory"
                android:text="HISTORY" />

            <Button
                android:id="@+id/cusWishList"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="btnToWishList"
                android:text="Wish List" />

            <Button
                android:id="@+id/viewShoppingCart"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="btnBookListToShoppingCart"
                android:text="Shopping Cart" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>