<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"   >
        <LinearLayout android:id="@+id/top"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="#eeeeee"
            android:layout_alignParentTop="true"  >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:id="@+id/wishListBar"
                android:layout_marginTop="10dp"
                android:text="Wish List"
                android:textSize="30dp"
                />

        </LinearLayout>

        <LinearLayout android:id="@+id/center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/top"
            android:layout_above="@id/bottom"
             >

            <ListView android:id="@+id/wishList"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dip"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/bottom"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="#eeeeee"
            android:layout_alignParentBottom="true"  >

            <Button
                android:id="@+id/wishListBack"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="btnWishBack"
                android:text="Back" />

            <Button
                android:id="@+id/wishListRemove"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="btnDeleteWish"
                android:text="Remove" />

            <Button
                android:id="@+id/addWish"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="btnOpenNewWish"
                android:text="+ New Wish" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>